<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".playersNames">

    <LinearLayout
        android:id="@+id/P1Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/P2Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtP1Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/joueur_1"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtP1Name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/P2Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/P3Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/P1Name">

        <TextView
            android:id="@+id/txtP2Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/joueur_2"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtP2Name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/P3Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/P4Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/P2Name">

        <TextView
            android:id="@+id/txtP3Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/joueur_3"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtP3Name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/P4Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/btnValidateNames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/P3Name">

        <TextView
            android:id="@+id/txtP4Name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/joueur_4"
            android:textAlignment="center"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTxtP4Name"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnValidateNames"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:text="@string/valider"
        android:textStyle="bold"
        app:cornerRadius="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/P4Name" />

</androidx.constraintlayout.widget.ConstraintLayout>